changes in environment variable

--- a/Assignment 2/rag_ollama_&_pinecone.ipynb
+++ b/Assignment 2/rag_ollama_&_pinecone.ipynb
@@ -743,7 +743,7 @@
         "# Define the embeddings model and connect to the Pinecone knowledge store\n",
         "embeddings = PineconeEmbeddings(\n",
         "    model=model_name,\n",
-        "    pinecone_api_key=api_key)"
+        "    pinecone_api_key=PINECONE_API_KEY)"
       ]
     },
     {
@@ -1095,7 +1095,7 @@
         ")\n",
         "\n",
         "# Access token and model name\n",
-        "access_token = \"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\"\n",
+        "access_token = os.getenv('HUGGING_FACE_ACCESS_TOKEN')\n",
         "model_nm = \"meta-llama/Llama-2-7b-chat-hf\"\n",
         "\n",
         "# Load model configuration\n",
